--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,14 @@
 		<dependency>
 			<groupId>ch.ethz.idsc</groupId>
 			<artifactId>tensor</artifactId>
-			<version>0.4.2</version>
+			<version>0.4.5</version>
+		</dependency>
+		<dependency> <!-- Serial Port Communication -->
+			<groupId>com.fazecast</groupId>
+			<artifactId>jSerialComm</artifactId>
+			<version>1.3.11</version>
 		</dependency>
 	</dependencies>
-
 
 	<repositories>
 		<repository>
